back to the preview page when the preview page was the last page accessed.
[Paul Orrock]

=item *

The XML generated when exporting element types via SOAP no longer inccludes
the C<top_level> element twice, thus avoiding mysterious "no sites defined"
errors when attempting to import or update element types from that XML.
Reported by Nate Perry-Thistle. [David]

=back

=head1 VERSION 1.10.0 (2006-01-23)

=head2 Improvements

=over

=item *

Eliminated letter graphics for "Published" and "Deployed" labels in story,
media, and template managers in favor of localizable characters. [David]

=item *

Moved the C<display_pages()> method from subclasses to
L<Bric::Util::Burner|Bric::Util::Burner>. Each subclass must implement a
C<display_element()> method for it to work; this means that it works for all
current burners except the HTML::Template burner, which manages pages
differently. This also fixed pagination issues in the Template Toolkit and PHP
burners. [David]

=item *

Completely updated L<Bric::Templates|Bric::Templates> and
L<Bric::AdvTemplates|Bric::AdvTemplates>, with expanded API documentation and
examples in Mason, Template Toolkit, and PHP. [David]

=item *

Refactored the left navigation code to perform better and be easier to
maintain. It now also sorts the admin menu items in alphabetical order by the
localized name of each. [David]

=item *

Updated the UI to fix Internet Explorer glitches. [Marshall]

=item *

The Element Type profile is now much smarter about displaying site
associations with an element type. If the user has access to only one site and
the element type is associated with no more than one site, then the "Sites"
section won't be displayed, but the primary output channel can be selected via
a radio button among the list of output channels. If the user has access to
more than one site or if the element type is associated with more than one
site, the "Sites" section will be displayed and the primary output channel can